Fix bug where ellipses are invisible if motion is reduced;

--- a/docs/app.css
+++ b/docs/app.css
@@ -317,23 +317,23 @@ html {
 .pending::after {
   display: inline-block;
   animation: ellipses steps(1, end) 1.5s infinite;
-  content: "";
+  content: "...";
 }
 @keyframes ellipses {
   0% {
-    content: "";
-  }
-  25% {
-    content: ".";
-  }
-  50% {
-    content: "..";
-  }
-  75% {
     content: "...";
   }
-  100% {
+  25% {
     content: "";
+  }
+  50% {
+    content: ".";
+  }
+  75% {
+    content: "..";
+  }
+  100% {
+    content: "...";
   }
 }
 
